--- a/index.html
+++ b/index.html
@@ -549,7 +549,7 @@
     const paises = ["CO","BR","AR","PE","CL","MX","PA"];
     const mediosPorPais = {
       "CO": [  
-        { "label": "PSE", "columna": "PSE" },  
+        { "label": "PSE Ding", "columna": "PSE Ding" },  
         { "label": "Bre-B Ding", "columna": "Bre-B Ding" },  
         { "label": "Efecty", "columna": "Efecty" },  
         { "label": "OXXO", "columna": "OXXO" },  
@@ -837,7 +837,7 @@
       ];
       const en_encabezados = [
         "MCC",
-        "MCC CODE DESCRIPTION EN",
+        "MCC CODE DESCRIPTION ES",
         "Actividad",
         "Categroria / Subcategoria",
         "ADD",
