--- a/index.html
+++ b/index.html
@@ -553,21 +553,16 @@
         { "label": "Bre-B Ding", "columna": "Bre-B Ding" },  
         { "label": "Efecty", "columna": "Efecty" },  
         { "label": "OXXO", "columna": "OXXO" },  
-        { "label": "Codensa", "columna": "Codensa" },  
-        { "label": "IGT", "columna": "IGT" },  
+        { "label": "Codensa", "columna": "Codensa" },
         { "label": "Davivienda", "columna": "Davivienda" },  
         { "label": "Ding", "columna": "Ding" },  
         { "label": "Bancolombia", "columna": "Bancolombia" },  
         { "label": "Nequi", "columna": "Nequi" },  
-        { "label": "Botón", "columna": "Botón" },  
+        { "label": "Botón Bancolombia", "columna": "Botón" },  
         { "label": "Movii", "columna": "Movii" },  
-        { "label": "Banco de Bogotá", "columna": "Banco de Bogotá" },  
-        { "label": "Scotiabank", "columna": "Scotiabank" },  
+        { "label": "Banco de Bogotá", "columna": "Banco de Bogotá" }, 
         { "label": "Scotiabank Colpatria", "columna": "Scotiabank Colpatria" },  
-        { "label": "ACH", "columna": "ACH" },  
-        { "label": "Matrix", "columna": "Matrix" },  
-        { "label": "TC", "columna": "TC" },  
-        { "label": "Banco Occidente", "columna": "Banco Occidente" },  
+        { "label": "Matrix", "columna": "Matrix" },
         { "label": "BBVA", "columna": "BBVA" }  
       ],
       "CL": [
