--- a/index.html
+++ b/index.html
@@ -558,7 +558,7 @@
         { "label": "Ding", "columna": "Ding" },  
         { "label": "Bancolombia", "columna": "Bancolombia" },  
         { "label": "Nequi", "columna": "Nequi" },  
-        { "label": "Botón Bancolombia", "columna": "Botón" },  
+        { "label": "Botón Bancolombia", "columna": "Botón Bancolombia" },  
         { "label": "Movii", "columna": "Movii" },  
         { "label": "Banco de Bogotá", "columna": "Banco de Bogotá" }, 
         { "label": "Scotiabank Colpatria", "columna": "Scotiabank Colpatria" },  
