--- a/index.html
+++ b/index.html
@@ -566,12 +566,10 @@
         { "label": "BBVA", "columna": "BBVA" }  
       ],
       "CL": [
-        { "label": "IGT", "columna": "IGT__1" },
         { "label": "Multicaja", "columna": "Multicaja" },
         { "label": "Transbank", "columna": "Transbank" },
         { "label": "KLAP", "columna": "KLAP" },
-        { "label": "KHIPU", "columna": "KHIPU" },
-        { "label": "Santander", "columna": "Santander__1" }
+        { "label": "KHIPU", "columna": "KHIPU" }
       ],
       "MX": [
         { "label": "Banorte", "columna": "Banorte" },
@@ -591,7 +589,7 @@
         {label: "YAPE", columna: "YAPE"}
       ],
       "AR": [
-        {label: "Amex", columna: "Amex__1"},  
+        {label: "Amex__1", columna: "Amex__1"},  
         {label: "Cobro Express", columna: "Cobro Express"},  
         {label: "Pagofacil", columna: "Pagofacil"},  
         {label: "Prisma", columna: "Prisma"},  
