--- a/index.html
+++ b/index.html
@@ -577,7 +577,6 @@
         { "label": "FISERV", "columna": "FISERV" },
         { "label": "OXXO", "columna": "OXXO" },
         { "label": "Seven Eleven", "columna": "Seven Eleven" },
-        { "label": "Santander", "columna": "Santander" },
         { "label": "Bancomer", "columna": "Bancomer" },
         { "label": "SPEI", "columna": "SPEI" }
       ],
@@ -589,7 +588,7 @@
         {label: "YAPE", columna: "YAPE"}
       ],
       "AR": [
-        {label: "Amex__1", columna: "Amex__1"},  
+        {label: "Amex", columna: "Amex__1"},  
         {label: "Cobro Express", columna: "Cobro Express"},  
         {label: "Pagofacil", columna: "Pagofacil"},  
         {label: "Prisma", columna: "Prisma"},  
