--- a/index.html
+++ b/index.html
@@ -588,7 +588,7 @@
         {label: "YAPE", columna: "YAPE"}
       ],
       "AR": [
-        {label: "Amex", columna: "Amex__1"},  
+        {label: "Amex__1", columna: "Amex__1"},  
         {label: "Cobro Express", columna: "Cobro Express"},  
         {label: "Pagofacil", columna: "Pagofacil"},  
         {label: "Prisma", columna: "Prisma"},  
@@ -597,12 +597,11 @@
         {label: "Payway", columna: "Payway"}
       ],
       "PA": [
-        {label: "FISERV", columna: "FISERV"}
+        {label: "SIGMA", columna: "SIGMA"}
       ],
       "BR": [
         { "label": "FISERV", "columna": "FISERV" },
         { "label": "REDE", "columna": "REDE" },
-        { "label": "SIGMA", "columna": "SIGMA" },
         { "label": "PIX - REDE", "columna": "PIX - REDE" },
         { "label": "PIX - QI TECH", "columna": "PIX - QI TECH" },
         { "label": "BOLETO", "columna": "BOLETO" }
