--- a/index.html
+++ b/index.html
@@ -582,7 +582,7 @@
       ],
       "PE": [
         { label: "Pago efectivo", columna: "Pago efectivo" },
-        { label: "Amex__1", columna: "Amex__1" },
+        { label: "Amex PR", columna: "Amex PR" },
         { label: "Niubiz", columna: "Niubiz" },
         { label: "Izipay", columna: "Izipay" },
         { label: "YAPE", columna: "YAPE" }
