--- a/index.html
+++ b/index.html
@@ -588,7 +588,7 @@
         { label: "YAPE", columna: "YAPE" }
       ],
       "AR": [
-        { label: "Amex__2", columna: "Amex__2" },
+        { label: "Amex__AR", columna: "Amex__AR" },
         { label: "Cobro Express", columna: "Cobro Express" },
         { label: "Pagofacil", columna: "Pagofacil" },
         { label: "Prisma", columna: "Prisma" },
