--- a/index.html
+++ b/index.html
@@ -511,7 +511,7 @@
         { tipo: "permitido", texto: "Allowed: Authorized activity with general KYC requirements." },
         { tipo: "restringido", texto: "Restricted: Requires extra conditions (licenses, approvals, enhanced KYC)." },
         { tipo: "prohibido", texto: "Prohibited: Not eligible for onboarding." },
-        { tipo: "exclusive", texto: "Exclusive: Exclusive for payment method should not be activated." }
+        { tipo: "exclusivo", texto: "Exclusive: Exclusive for payment method should not be activated." }
       ]
     };
 
