--- a/index.html
+++ b/index.html
@@ -910,6 +910,8 @@
               estilo = 'background-color:#e6fbe9;';
             } else if (v.includes('restringido') || v.includes('restricted')) {
               estilo = 'background-color:#fffbe6;';
+            } else if (v.includes('exclusivo') || v.includes('exclusive')) {
+              estilo = 'background-color:#fffbe6;';  
             } else if (v.includes('prohibido') || v.includes('prohibited')) {
               estilo = 'background-color:#ffe6ec;';
             }
