--- a/index.html
+++ b/index.html
@@ -537,7 +537,7 @@
       if (tipo === "exclusivo") {
         return `<span class="badge badge-exclusivo">
           <svg viewBox="0 0 20 20" fill="currentColor">
-            <circle cx="10" cy="10" r="10" fill="#b59a00"/>
+            <circle cx="10" cy="10" r="10" fill="#555555"/>
             <rect x="5" y="7" width="10" height="6" rx="2" fill="#fff"/>
           </svg>
           ${texto}
@@ -663,7 +663,7 @@
       </span>`;
       if (v.includes('exclusivo') || v.includes('exclusive')) return `<span class="badge badge-exclusivo">
         <svg viewBox="0 0 20 20" fill="currentColor">
-          <circle cx="10" cy="10" r="10" fill="#d6003a"/>
+          <circle cx="10" cy="10" r="10" fill="#555555"/>
           <path d="M7 7l6 6M13 7l-6 6" stroke="#fff" stroke-width="2" stroke-linecap="round"/>
         </svg>
         ${label}
@@ -697,7 +697,7 @@
       </span>`;
       if (v.includes('exclusivo') || v.includes('exclusive')) return `<span class="badge badge-exclusivo">
         <svg viewBox="0 0 20 20" fill="currentColor">
-          <circle cx="10" cy="10" r="10" fill="#b59a00"/>
+          <circle cx="10" cy="10" r="10" fill="#555555"/>
           <rect x="5" y="7" width="10" height="6" rx="2" fill="#fff"/>
         </svg>
         ${t('exclusivo')}
@@ -911,7 +911,7 @@
             } else if (v.includes('restringido') || v.includes('restricted')) {
               estilo = 'background-color:#fffbe6;';
             } else if (v.includes('exclusivo') || v.includes('exclusive')) {
-              estilo = 'background-color:#fffbe6;';  
+              estilo = 'background-color:#555555;';  
             } else if (v.includes('prohibido') || v.includes('prohibited')) {
               estilo = 'background-color:#ffe6ec;';
             }
