--- a/index.html
+++ b/index.html
@@ -295,7 +295,7 @@
       color: #d6003a;
       border-color: #d6003a;
     }
-    .badge-exclusive {
+    .badge-exclusivo {
       background: #f0f0f0; /* Un gris claro para el fondo */
       color: #555555;     /* Un gris oscuro para el texto */
       border-color: #555555; /* Un gris oscuro para el borde */
