--- a/index.html
+++ b/index.html
@@ -537,8 +537,7 @@
       if (tipo === "exclusivo") {
         return `<span class="badge badge-exclusivo">
           <svg viewBox="0 0 20 20" fill="currentColor">
-            <circle cx="10" cy="10" r="10" fill="#555555"/>
-            <rect x="5" y="7" width="10" height="6" rx="2" fill="#fff"/>
+            <polygon points="10,0 20,20 0,20" />
           </svg>
           ${texto}
         </span>`;
