--- a/index.html
+++ b/index.html
@@ -538,7 +538,7 @@
         return `<span class="badge badge-exclusivo">
           <svg viewBox="0 0 20 20" fill="currentColor">
             <circle cx="10" cy="10" r="10" fill="#555555"/>
-            <polygon points="10,0 20,20 0,20" />
+            <polygon points="10,0 20,20 0,20" width="10" height="6" rx="2" fill="#fff />
           </svg>
           ${texto}
         </span>`;
