--- a/index.html
+++ b/index.html
@@ -538,7 +538,7 @@
         return `<span class="badge badge-exclusivo">
           <svg viewBox="0 0 20 20" fill="currentColor">
             <circle cx="10" cy="10" r="10" fill="#555555"/>
-            <polygon points="10,0 20,20 0,20"/>
+            <polygon points="10,0 20,20 0,20" fill="#fff/>
           </svg>
           ${texto}
         </span>`;
@@ -698,7 +698,7 @@
       if (v.includes('exclusivo') || v.includes('exclusive')) return `<span class="badge badge-exclusivo">
         <svg viewBox="0 0 20 20" fill="currentColor">
           <circle cx="10" cy="10" r="10" fill="#555555"/>
-          <polygon points="10,0 20,20 0,20" stroke="#fff" stroke-width="2" fill="none" stroke-linecap="round/>
+          <polygon points="10,0 20,20 0,20"/>
         </svg>
         ${t('exclusivo')}
       </span>`;
