--- a/index.html
+++ b/index.html
@@ -664,7 +664,7 @@
       if (v.includes('exclusivo') || v.includes('exclusive')) return `<span class="badge badge-exclusivo">
         <svg viewBox="0 0 20 20" fill="currentColor">
           <circle cx="10" cy="10" r="10" fill="#555555"/>
-          <polygon points="10,5 15,15 5,15"/>
+          <polygon points="10,5 15,15 5,15" stroke="#fff" stroke-width="2" stroke-linecap="round"/>
         </svg>
         ${label}
       </span>`;
