--- a/index.html
+++ b/index.html
@@ -698,7 +698,7 @@
       if (v.includes('exclusivo') || v.includes('exclusive')) return `<span class="badge badge-exclusivo">
         <svg viewBox="0 0 20 20" fill="currentColor">
           <circle cx="10" cy="10" r="10" fill="#555555"/>
-          <polygon points="10,6 16,16 4,16"/>
+          <polygon points="10,6 16,16 4,16" stroke="#fff"/>
         </svg>
         ${t('exclusivo')}
       </span>`;
