--- a/index.html
+++ b/index.html
@@ -598,13 +598,13 @@
       ],
       "PE": [
         { label: "Pago efectivo", columna: "Pago efectivo" },
-        { label: "Amex PR", columna: "Amex PR" },
+        { label: "Amex", columna: "Amex PR" },
         { label: "Niubiz", columna: "Niubiz" },
         { label: "Izipay", columna: "Izipay" },
         { label: "YAPE", columna: "YAPE" }
       ],
       "AR": [
-        { label: "Amex__AR", columna: "Amex__AR" },
+        { label: "Amex", columna: "Amex__AR" },
         { label: "Cobro Express", columna: "Cobro Express" },
         { label: "Pagofacil", columna: "Pagofacil" },
         { label: "Prisma", columna: "Prisma" },
