--- a/index.html
+++ b/index.html
@@ -444,7 +444,7 @@
       <option value="es">ES</option>
       <option value="en">EN</option>
     </select>
-    <button id="exportButton" class="export-btn" onclick="exportarExcel()">Exportar a Excel</button>
+    <button id="exportButton" class="export-btn" onclick="exportarExcel()">Export</button>
   </div>
   <div id="resultados" class="loading">Cargando datos...</div>
 
