Fix duplicate entry for 'Matrix' in index.html

--- a/index.html
+++ b/index.html
@@ -578,8 +578,7 @@
         { "label": "Movii", "columna": "Movii" },
         { "label": "Banco de Bogotá", "columna": "Banco de Bogotá" },
         { "label": "Scotiabank Colpatria", "columna": "Scotiabank Colpatria" },
-        { "label": "Matrix", "columna": "Matrix" },
-        { "label": "BBVA", "columna": "BBVA" }
+        { "label": "Matrix", "columna": "Matrix" }
       ],
       "CL": [
         { "label": "Multicaja", "columna": "Multicaja" },
